[gd_scene load_steps=23 format=2]

[ext_resource path="res://addons/enjin/example/scripts/client/Sidebar.gd" type="Script" id=1]
[ext_resource path="res://addons/enjin/example/scripts/client/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://addons/enjin/example/prefabs/Controls.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/enjin/example/art/ui/minotaur.png" type="Texture" id=12]
[ext_resource path="res://addons/enjin/example/art/slime/slime-attack-2.png" type="Texture" id=13]
[ext_resource path="res://addons/enjin/example/fonts/Roboto24.tres" type="DynamicFont" id=14]
[ext_resource path="res://addons/enjin/example/themes/pause_sidebar.tres" type="Theme" id=15]
[ext_resource path="res://addons/enjin/example/art/coins/EnjinCoin_Gold Coin_4.png" type="Texture" id=16]
[ext_resource path="res://addons/enjin/example/art/coins/EnjinCoin_Gold Coin_3.png" type="Texture" id=17]
[ext_resource path="res://addons/enjin/example/art/coins/EnjinCoin_Gold Coin_6.png" type="Texture" id=18]
[ext_resource path="res://addons/enjin/example/art/coins/EnjinCoin_Gold Coin_5.png" type="Texture" id=19]
[ext_resource path="res://addons/enjin/example/art/coins/EnjinCoin_Gold Coin_1.png" type="Texture" id=20]
[ext_resource path="res://addons/enjin/example/art/coins/EnjinCoin_Gold Coin_7.png" type="Texture" id=21]
[ext_resource path="res://addons/enjin/example/art/coins/EnjinCoin_Gold Coin_0.png" type="Texture" id=22]
[ext_resource path="res://addons/enjin/example/art/coins/EnjinCoin_Gold Coin_2.png" type="Texture" id=23]
[ext_resource path="res://addons/enjin/example/art/key_02d.png" type="Texture" id=24]
[ext_resource path="res://addons/enjin/example/art/heart.png" type="Texture" id=25]
[ext_resource path="res://addons/enjin/example/art/crown.png" type="Texture" id=26]
[ext_resource path="res://addons/enjin/example/audio/ui_blip_sfx.wav" type="AudioStream" id=27]
[ext_resource path="res://addons/enjin/example/audio/ui_click_sfx.wav" type="AudioStream" id=28]

[sub_resource type="AnimatedTexture" id=1]
frames = 8
fps = 8.0
frame_0/texture = ExtResource( 22 )
frame_1/texture = ExtResource( 20 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 23 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 17 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 16 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 19 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 18 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 21 )
frame_7/delay_sec = 0.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 26 )
region = Rect2( 41, 12, 14, 8 )

[node name="PauseMenu" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )
bus = "UI"

[node name="HighlightSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )
bus = "UI"

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sidebar" type="Panel" parent="HBox"]
margin_right = 350.0
margin_bottom = 1080.0
rect_min_size = Vector2( 350, 0 )
theme = ExtResource( 15 )
script = ExtResource( 1 )
btns = [ NodePath("Buttons/VBox/ResumeBtn"), NodePath("Buttons/VBox/Options"), NodePath("Buttons/VBox/QuitBtn") ]

[node name="Buttons" type="MarginContainer" parent="HBox/Sidebar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="HBox/Sidebar/Buttons"]
margin_left = 30.0
margin_right = 350.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeBtn" type="Button" parent="HBox/Sidebar/Buttons/VBox"]
margin_top = 424.0
margin_right = 320.0
margin_bottom = 481.0
focus_neighbour_bottom = NodePath("../Options")
text = "RESUME"
align = 0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Options" type="Button" parent="HBox/Sidebar/Buttons/VBox"]
margin_top = 511.0
margin_right = 320.0
margin_bottom = 568.0
focus_neighbour_top = NodePath("../ResumeBtn")
focus_neighbour_bottom = NodePath("../QuitBtn")
text = "OPTIONS"
align = 0

[node name="QuitBtn" type="Button" parent="HBox/Sidebar/Buttons/VBox"]
margin_top = 598.0
margin_right = 320.0
margin_bottom = 655.0
focus_neighbour_top = NodePath("../Options")
text = "QUIT"
align = 0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Controls" parent="HBox" instance=ExtResource( 3 )]

[node name="GameElements" type="VBoxContainer" parent="HBox"]
margin_left = 1145.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBox/GameElements"]
margin_right = 775.0
margin_bottom = 538.0
size_flags_vertical = 3

[node name="TopRow" type="HBoxContainer" parent="HBox/GameElements/VBoxContainer"]
margin_right = 775.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="Coin" type="TextureRect" parent="HBox/GameElements/VBoxContainer/TopRow"]
margin_left = 187.0
margin_top = 48.0
margin_right = 267.0
margin_bottom = 128.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource( 1 )
expand = true
stretch_mode = 5

[node name="CoinDescription" type="Label" parent="HBox/GameElements/VBoxContainer/TopRow"]
margin_left = 287.0
margin_top = 25.0
margin_right = 587.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 14 )
text = "Pick up coins found scattered throughtout the Level!"
align = 3
valign = 1
autowrap = true
uppercase = true

[node name="MidRow" type="HBoxContainer" parent="HBox/GameElements/VBoxContainer"]
margin_top = 180.0
margin_right = 775.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1

[node name="KeyInfo" type="HBoxContainer" parent="HBox/GameElements/VBoxContainer/MidRow"]
margin_right = 387.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Key" type="TextureRect" parent="HBox/GameElements/VBoxContainer/MidRow/KeyInfo"]
margin_top = 48.0
margin_right = 80.0
margin_bottom = 128.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource( 24 )
expand = true
stretch_mode = 5

[node name="KeyDescription" type="Label" parent="HBox/GameElements/VBoxContainer/MidRow/KeyInfo"]
margin_left = 84.0
margin_top = 57.0
margin_right = 334.0
margin_bottom = 118.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 14 )
text = "Find the key to unlock the gate!"
align = 3
valign = 1
autowrap = true
uppercase = true

[node name="HeartInfo" type="HBoxContainer" parent="HBox/GameElements/VBoxContainer/MidRow"]
margin_left = 387.0
margin_right = 775.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Heart" type="TextureRect" parent="HBox/GameElements/VBoxContainer/MidRow/HeartInfo"]
margin_top = 48.0
margin_right = 80.0
margin_bottom = 128.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource( 25 )
expand = true
stretch_mode = 5

[node name="HeartDescription" type="Label" parent="HBox/GameElements/VBoxContainer/MidRow/HeartInfo"]
margin_left = 100.0
margin_top = 41.0
margin_right = 350.0
margin_bottom = 134.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 14 )
text = "Pickup the heart for a +2 heatlh boost!"
align = 3
valign = 1
autowrap = true
uppercase = true

[node name="BottomRow" type="HBoxContainer" parent="HBox/GameElements/VBoxContainer"]
margin_top = 360.0
margin_right = 775.0
margin_bottom = 538.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="Crown" type="TextureRect" parent="HBox/GameElements/VBoxContainer/BottomRow"]
margin_left = 207.0
margin_top = 64.0
margin_right = 297.0
margin_bottom = 114.0
rect_min_size = Vector2( 90, 50 )
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource( 2 )
expand = true
stretch_mode = 5

[node name="CrownDescription" type="Label" parent="HBox/GameElements/VBoxContainer/BottomRow"]
margin_left = 317.0
margin_top = 42.0
margin_right = 567.0
margin_bottom = 135.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 14 )
text = "Beat the boss and claim the crown for a new look!"
align = 3
valign = 1
autowrap = true
uppercase = true

[node name="Enemies" type="GridContainer" parent="HBox/GameElements"]
margin_top = 542.0
margin_right = 775.0
margin_bottom = 1080.0
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 2

[node name="SlimeTexture" type="TextureRect" parent="HBox/GameElements/Enemies"]
margin_left = 118.0
margin_top = 44.0
margin_right = 268.0
margin_bottom = 194.0
rect_min_size = Vector2( 150, 150 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="SlimeDescription" type="Label" parent="HBox/GameElements/Enemies"]
margin_left = 430.0
margin_top = 72.0
margin_right = 730.0
margin_bottom = 165.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 14 )
text = "Defeat the Slime by jumping on it. They have a nasty bite!"
align = 3
valign = 1
autowrap = true
uppercase = true

[node name="MinotaurDescription" type="Label" parent="HBox/GameElements/Enemies"]
margin_left = 43.0
margin_top = 309.0
margin_right = 343.0
margin_bottom = 466.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 14 )
text = "The Minotaur is the boss of the dungeon. Jump on top of his head to hurt him. Watch out for his axe!"
align = 3
valign = 1
autowrap = true
uppercase = true

[node name="MinotaurTexture" type="TextureRect" parent="HBox/GameElements/Enemies"]
margin_left = 430.0
margin_top = 238.0
margin_right = 730.0
margin_bottom = 538.0
rect_min_size = Vector2( 300, 300 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 12 )
expand = true
stretch_mode = 5
[connection signal="mouse_entered" from="HBox/Sidebar/Buttons/VBox/ResumeBtn" to="." method="_on_btn_mouse_entered"]
[connection signal="pressed" from="HBox/Sidebar/Buttons/VBox/ResumeBtn" to="." method="_on_btn_pressed"]
[connection signal="pressed" from="HBox/Sidebar/Buttons/VBox/ResumeBtn" to="." method="_on_resume"]
[connection signal="mouse_entered" from="HBox/Sidebar/Buttons/VBox/Options" to="." method="_on_btn_mouse_entered"]
[connection signal="pressed" from="HBox/Sidebar/Buttons/VBox/Options" to="." method="_on_btn_pressed"]
[connection signal="pressed" from="HBox/Sidebar/Buttons/VBox/Options" to="." method="_on_options"]
[connection signal="mouse_entered" from="HBox/Sidebar/Buttons/VBox/QuitBtn" to="." method="_on_btn_mouse_entered"]
[connection signal="pressed" from="HBox/Sidebar/Buttons/VBox/QuitBtn" to="." method="_on_btn_pressed"]
[connection signal="pressed" from="HBox/Sidebar/Buttons/VBox/QuitBtn" to="." method="_on_quit"]
